--- a/index.html
+++ b/index.html
@@ -988,10 +988,14 @@
             `).join('');
         
             return `
-                <div class="flex flex-col h-full p-4">
-                    <input type="text" id="note-title-input" class="bg-transparent text-2xl font-bold mb-4 focus:outline-none focus:ring-1 focus:ring-accent rounded px-2 py-1" value="${activeSession.title || ''}" placeholder="Название папки с заметками">
+                <div class="flex flex-col h-full">
+                    <div class="flex-shrink-0 p-3 border-b border-border-color">
+                         <div class="flex items-center gap-3">
+                            <input type="text" id="note-title-input" class="bg-transparent text-lg font-semibold focus:outline-none focus:ring-1 focus:ring-accent rounded px-2 py-1 flex-grow min-w-0" value="${activeSession.title || ''}" placeholder="Название папки с заметками">
+                         </div>
+                    </div>
                     
-                    <div class="flex-grow overflow-y-auto pr-2">
+                    <div class="flex-grow overflow-y-auto p-4">
                         <div id="note-cards-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4">
                             ${cardsHTML}
                             <button id="add-new-card-btn" class="min-h-[180px] flex items-center justify-center rounded-lg">
