--- a/index.html
+++ b/index.html
@@ -1027,11 +1027,11 @@
                         <div class="flex items-center justify-center gap-3">
                              <button id="add-new-text-block-btn" class="w-full flex items-center justify-center py-2 px-4 rounded-md border-2 border-dashed border-border-color text-text-secondary hover:border-accent hover:text-accent transition-colors">
                                 <i data-lucide="pilcrow" class="w-5 h-5 mr-2"></i>
-                                Добавить текст
+                                Текст
                             </button>
                              <button id="add-new-code-block-btn" class="w-full flex items-center justify-center py-2 px-4 rounded-md border-2 border-dashed border-border-color text-text-secondary hover:border-accent hover:text-accent transition-colors">
                                 <i data-lucide="code" class="w-5 h-5 mr-2"></i>
-                                Добавить код
+                                Код
                             </button>
                         </div>
                     </div>
