--- a/index.html
+++ b/index.html
@@ -1321,6 +1321,11 @@
             // Применяем авто-высоту ко всем существующим полям при первоначальной загрузке
             blocksContainer.querySelectorAll('.simple-note-content-textarea').forEach(autoResizeTextarea);
             
+            // Прокручиваем контейнер в самый низ после рендеринга
+            setTimeout(() => {
+                container.scrollTop = container.scrollHeight;
+            }, 50); // Небольшая задержка, чтобы браузер успел отрисовать и посчитать высоту
+
             // Функция добавления нового блока
             const addNewBlock = async (type) => {
                 const newBlock = {
