--- a/index.html
+++ b/index.html
@@ -666,7 +666,6 @@
             const cards = activeSession.cards || [];
             const cardsHTML = cards.map(getCardHTML).join('');
         
-            // Создаем структуру, полностью аналогичную чату, для корректной анимации и стилей
             return `
                 <div class="flex flex-col h-full">
                     <div class="flex-shrink-0 p-3 border-b border-border-color">
@@ -679,13 +678,11 @@
                     </div>
                     
                     <div id="notepad-scroll-container" class="flex-grow overflow-y-auto p-4 ${state.isNotepadWidthCompact ? 'notepad-view-compact' : ''}">
-                        <div class="notepad-content-wrapper">
-                             <div id="note-cards-grid" class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-4 items-start">
-                                ${cardsHTML}
-                                <button id="add-new-card-btn" class="add-card-placeholder flex items-center justify-center rounded-lg border-2 border-dashed border-border-color hover:bg-bg-element transition-colors text-text-secondary p-4 min-h-[120px]">
-                                    <i data-lucide="plus" class="w-10 h-10"></i>
-                                </button>
-                            </div>
+                        <div id="note-cards-grid" class="grid grid-cols-1 gap-4 items-start">
+                            ${cardsHTML}
+                            <button id="add-new-card-btn" class="add-card-placeholder flex items-center justify-center rounded-lg border-2 border-dashed border-border-color hover:bg-bg-element transition-colors text-text-secondary p-4 min-h-[120px]">
+                                <i data-lucide="plus" class="w-10 h-10"></i>
+                            </button>
                         </div>
                     </div>
                 </div>
