--- a/index.html
+++ b/index.html
@@ -444,8 +444,6 @@
             const isExpanded = state.isSettingsPanelExpanded;
             const panelClasses = `collapsible-panel ${isExpanded ? 'expanded' : ''}`;
             const iconClasses = `w-5 h-5 transition-transform ${isExpanded ? 'expanded' : ''}`;
-            
-            const formContainerClasses = `flex-shrink-0 p-4 ${state.isChatWidthCompact ? 'chat-view-compact' : ''}`;
         
             return `<div class="flex flex-col h-full">
                 <div class="flex-shrink-0 p-3 border-b border-border-color">
@@ -476,8 +474,8 @@
                     </div>
                 </div>
                 <div id="chat-messages" class="flex-grow p-4 overflow-y-auto ${state.isChatWidthCompact ? 'chat-view-compact' : ''}"></div>
-                <form id="chat-form" class="${formContainerClasses}">
-                    <div class="relative w-full">
+                <form id="chat-form" class="flex-shrink-0 p-4">
+                    <div class="relative w-full max-w-4xl mx-auto">
                         <textarea id="chat-input" class="w-full bg-input border border-border-color rounded-lg p-3 pr-12 resize-none focus:outline-none focus:ring-2 focus:ring-accent" placeholder="Введите ваше сообщение..." rows="1"></textarea>
                         <button type="submit" class="absolute right-3 bottom-3 p-2 rounded-full bg-accent hover:bg-accent-hover transition-colors disabled:bg-gray-500">
                             <i data-lucide="send" class="w-5 h-5 text-white"></i>
