--- a/index.html
+++ b/index.html
@@ -577,6 +577,9 @@
                 `<details><summary>Показать ход мыслей</summary><div>$1</div></details>`
             );
             
+            processedContent = processedContent.replace(/\n{3,}/g, '\n\n');
+            const rawHtml = marked.parse(processedContent, { gfm: true }); 
+            
             const rawHtml = marked.parse(processedContent, { gfm: true });
             contentDiv.innerHTML = DOMPurify.sanitize(rawHtml, { ADD_TAGS: ['details', 'summary'] });
 
