--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     
     <!-- Стили вынесены в отдельный файл -->
-    <link rel="stylesheet" href="styles.css">
+    <!-- <link rel="stylesheet" href="styles.css"> -->
+    <link rel="stylesheet" href="styles.css?t=1627881600">
 
 </head>
 <body class="h-dvh w-full flex">
