--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
                 `<details><summary>Показать ход мыслей</summary><div>$1</div></details>`
             );
             
-            const rawHtml = marked.parseInline(processedContent, { breaks: true, gfm: true });
+            const rawHtml = marked.parse(processedContent, { breaks: true, gfm: true });
             contentDiv.innerHTML = DOMPurify.sanitize(rawHtml, { ADD_TAGS: ['details', 'summary'] });
 
             const actionsContainer = document.createElement('div');
