--- a/index.html
+++ b/index.html
@@ -572,7 +572,8 @@
                 `<details><summary>Показать ход мыслей</summary><div>$1</div></details>`
             );
             
-            const rawHtml = marked.parse(processedContent, { breaks: true, gfm: true });
+            let rawHtml = marked.parse(processedContent, { breaks: true, gfm: true });
+            rawHtml = rawHtml.replace(/<ul[^>]*>|<\/ul>/g, ''); // Удаляем теги <ul>
             contentDiv.innerHTML = DOMPurify.sanitize(rawHtml, { ADD_TAGS: ['details', 'summary'] });
 
             const actionsContainer = document.createElement('div');
