--- a/index.html
+++ b/index.html
@@ -572,8 +572,7 @@
                 `<details><summary>Показать ход мыслей</summary><div>$1</div></details>`
             );
             
-            let rawHtml = marked.parse(processedContent, { breaks: true, gfm: true });
-            rawHtml = rawHtml.replace(/<ul[^>]*>|<\/ul>/g, ''); // Удаляем теги <ul>
+            const rawHtml = marked.parse(processedContent, { breaks: true, gfm: true });
             contentDiv.innerHTML = DOMPurify.sanitize(rawHtml, { ADD_TAGS: ['details', 'summary'] });
 
             const actionsContainer = document.createElement('div');
