--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             sessions: [],
             providers: [],
             roles: [],
-            loadingSessionId: null
+            loadingSessionId: null,
             isAuthReady: false,
             isSidebarCollapsed: false,
             isChatWidthCompact: true,
